--- a/style.css
+++ b/style.css
@@ -2,8 +2,16 @@
     margin: 0;
     padding: 0;
 }
+.b{
+    background-image:url('https://i.pinimg.com/236x/35/cc/35/35cc357473dcc4c3f367c3f6fc12fbef.jpg') ;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+}
 header{
-    background: rgb(148, 26, 21);
+    background: rgb(7, 54, 182);
 }
 Body{
     background: rgb(202, 132, 130);
@@ -17,3 +25,4 @@ header{
     align-items: center;
     height: 12vh;
 }
+
