--- a/style.css
+++ b/style.css
@@ -3,15 +3,21 @@
     padding: 0;
 }
 .b{
-    background-image:url('https://i.pinimg.com/236x/35/cc/35/35cc357473dcc4c3f367c3f6fc12fbef.jpg') ;
-    background-position: center;
+    background-image:url('luan_logo.png') ;
+    background-position: left;
     background-repeat: no-repeat;
     background-size: contain;
-    width: 100%;
-    height: 100%;
+    background-attachment: scroll;
+    height: 112px;
+    width: 112px;
+    margin-left: 12px;
+    margin-top: 8px;
+    text-align: center;
 }
 header{
     background: rgb(7, 54, 182);
+ 
+    display: none;
 }
 Body{
     background: rgb(202, 132, 130);
