--- a/style.css
+++ b/style.css
@@ -2,33 +2,23 @@
     margin: 0;
     padding: 0;
 }
-.b{
-    background-image:url('luan_logo.png') ;
-    background-position: left;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-attachment: scroll;
-    height: 112px;
-    width: 112px;
-    margin-left: 12px;
-    margin-top: 8px;
-    text-align: center;
-}
-header{
-    background: rgb(7, 54, 182);
- 
-    display: none;
-}
-Body{
-    background: rgb(202, 132, 130);
-}
-footer{
-    background: grey;
-}
-header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 12vh;
+
+.backgroundPAG {
+	background-color: red;
+	background-size: cover;
+	background-position: center;
+	height: 50vw;
 }
 
+.content {
+	/* Content after the elastic header need a background-color to cover the elastic header. */
+	background-color: rgb(0, 97, 243);
+    width: auto;
+    height: 130px;
+}
+.b{
+    height: 112px;
+    width: 112px;
+    margin-top: 12px ;
+    margin-left: 12px ;
+}
