--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .backgroundPAG {
-	background-color: red;
+	background-color: rgb(255, 255, 255);
 	background-size: cover;
 	background-position: center;
 	height: 50vw;
